exercises/ex2-06-project1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project1
  template:
    metadata:
      labels:
        app: project1
    spec:
      volumes:
        - name: project1-vol
          persistentVolumeClaim:
            claimName: project1-claim
      containers:
        - name: project1
          image: sahilrajput03/project1-img
          volumeMounts:
            - name: project1-vol
              mountPath: /usr/src/app/files
        - name: ex2-02
          image: sahilrajput03/ex2-02-img
