exercises/ex2-06-project1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project1-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project1-svc
                port:
                  number: 2345
          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: ex2-02-svc
                port:
                  number: 2346
